# internal/app/app.go
@@ -7,14 +7,19 @@ import (
 	"yp-go-short-url-service/internal/handler"
 	"yp-go-short-url-service/internal/handler/health"
 	urlExtractorHandler "yp-go-short-url-service/internal/handler/urls/extractor"
+	userURLsHandler "yp-go-short-url-service/internal/handler/urls/extractor/user"
 	shortenBatchAPI "yp-go-short-url-service/internal/handler/urls/shortener/batch"
 	shortenAPI "yp-go-short-url-service/internal/handler/urls/shortener/json"
 	urlShortenerHandler "yp-go-short-url-service/internal/handler/urls/shortener/text"
+
 	"yp-go-short-url-service/internal/middleware"
 	"yp-go-short-url-service/internal/middleware/gzip"
 	baseRepo "yp-go-short-url-service/internal/repository/base"
+	"yp-go-short-url-service/internal/service"
+	authService "yp-go-short-url-service/internal/service/auth"
 	healthService "yp-go-short-url-service/internal/service/health"
 	initService "yp-go-short-url-service/internal/service/init"
+	jwtService "yp-go-short-url-service/internal/service/jwt"
 	urlExtractorService "yp-go-short-url-service/internal/service/urls/extractor"
 	urlShortenerService "yp-go-short-url-service/internal/service/urls/shortener"
 
@@ -32,9 +37,16 @@ type App struct {
 	shortLinksHandlerAPI      handler.Handler
 	shortLinksBatchHandlerAPI handler.Handler
 	fullLinkHandler           handler.Handler
+	userURLsHandler           handler.Handler
 	pingHandler               handler.Handler
+	services                  Services
 	settings                  *config.Settings
 	logger                    *zap.SugaredLogger
+}
+
+type Services struct {
+	auth service.AuthService
+	jwt  service.JWTService
 }
 
 func NewApp(logger *zap.SugaredLogger) *App {
@@ -42,6 +54,7 @@ func NewApp(logger *zap.SugaredLogger) *App {
 
 	router := gin.Default()
 	settings := config.NewSettings()
+	jwtSettings := settings.EnvSettings.JWT
 
 	dbPool := db.Setup(ctx, logger, &db.SetupParams{
 		PostgresDSN:      settings.GetPostgresDSN(),
@@ -49,16 +62,22 @@ func NewApp(logger *zap.SugaredLogger) *App {
 		PGMigrationsPath: settings.EnvSettings.PG.MigrationsPath,
 	})
 	repoURLs := baseRepo.NewURLsRepository(dbPool)
+	userRepo := baseRepo.NewUsersRepository(dbPool)
+	userURLsRepo := baseRepo.NewUserURLsRepository(dbPool)
 	InitService := initService.NewDataInitializerService(repoURLs, logger)
 	if err := InitService.Setup(ctx, settings.GetFileStoragePath()); err != nil {
 		logger.Fatalw("Failed to initialize data", "error", err)
 	}
 
+	AuthService := authService.NewAuthService(userRepo, jwtSettings)
+	JWTService := jwtService.NewJWTService(jwtSettings)
+
 	pingService := healthService.NewHealthCheckService(repoURLs)
-	URLShortenerService := urlShortenerService.NewURLShortenerService(repoURLs)
-	URLExtractorService := urlExtractorService.NewLinkExtractorService(repoURLs)
+	URLShortenerService := urlShortenerService.NewURLShortenerService(repoURLs, userURLsRepo)
+	URLExtractorService := urlExtractorService.NewLinkExtractorService(repoURLs, userURLsRepo)
 
 	URLExtractorHandler := urlExtractorHandler.NewExtractingFullLinkHandler(URLExtractorService)
+	userURLsHandler := userURLsHandler.NewExtractingUserURLsHandler(URLExtractorService)
 	URLShortenerHandler := urlShortenerHandler.NewCreatingShortLinksHandler(URLShortenerService, settings)
 	URLShortenerAPIHandler := shortenAPI.NewCreatingShortURLsAPIHandler(URLShortenerService, settings)
 	URLShortenerBatchAPIHandler := shortenBatchAPI.NewCreatingShortURLsByBatchAPIHandler(URLShortenerService, settings)
@@ -70,24 +89,43 @@ func NewApp(logger *zap.SugaredLogger) *App {
 		shortLinksHandlerAPI:      URLShortenerAPIHandler,
 		shortLinksBatchHandlerAPI: URLShortenerBatchAPIHandler,
 		fullLinkHandler:           URLExtractorHandler,
+		userURLsHandler:           userURLsHandler,
 		pingHandler:               healthHandler,
-		settings:                  settings,
-		logger:                    logger,
+		services: Services{
+			auth: AuthService,
+			jwt:  JWTService,
+		},
+		settings: settings,
+		logger:   logger,
 	}
 }
 
-func (a *App) SetupMiddlewares() {
+func (a *App) SetupCommonMiddlewares() {
 	a.router.Use(middleware.RequestIDMiddleware(a.logger))
 	a.router.Use(middleware.LoggerMiddleware(a.logger))
 	a.router.Use(gzip.Middleware(a.logger))
 }
 
 func (a *App) SetupRoutes() {
-	a.router.GET("/ping", a.pingHandler.Handle)
+	anonAllowedMiddleware := middleware.JWTAuthMiddleware(a.services.jwt, a.services.auth, a.settings.EnvSettings.JWT, true, a.logger)
+	anonNotAllowedMiddleware := middleware.JWTAuthMiddleware(a.services.jwt, a.services.auth, a.settings.EnvSettings.JWT, false, a.logger)
+
+	publicGroup := a.router.Group("/")
+	publicGroup.Use(anonAllowedMiddleware)
+	{
+		publicGroup.GET("/ping", a.pingHandler.Handle)
+		publicGroup.POST("/", a.shortLinksHandler.Handle)
+		publicGroup.POST("/api/shorten", a.shortLinksHandlerAPI.Handle)
+		publicGroup.POST("/api/shorten/batch", a.shortLinksBatchHandlerAPI.Handle)
+	}
+
+	privateGroup := a.router.Group("/")
+	privateGroup.Use(anonNotAllowedMiddleware)
+	{
+		privateGroup.GET("/api/user/urls", a.userURLsHandler.Handle)
+	}
+
 	a.router.GET("/:shortURL", a.fullLinkHandler.Handle)
-	a.router.POST("/", a.shortLinksHandler.Handle)
-	a.router.POST("/api/shorten", a.shortLinksHandlerAPI.Handle)
-	a.router.POST("/api/shorten/batch", a.shortLinksBatchHandlerAPI.Handle)
 	a.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
 
